--- a/BetaCode/index.html
+++ b/BetaCode/index.html
@@ -15,7 +15,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://web.squarecdn.com/v1/square.js"></script>
+    <script src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
+    <!-- <script src="https://web.squarecdn.com/v1/square.js"></script> -->
 
   </body>
 </html>
